--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.14.1",
+    "@google/genai": "^1.5.1",
     "dotenv": "^16.4.5",
     "zod": "^3.23.8"
   },
