--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,23 +1,22 @@
 {
-    "name": "ai_developer_ts",
-	"dockerComposeFile": [
-		"docker-compose.yml"
-	],
-    "service": "ai_developer_ts",
-    "workspaceFolder": "/workspace",
-	"remoteUser": "vscode",
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "dbaeumer.vscode-eslint",
-                "esbenp.prettier-vscode",
-                "ms-vscode.vscode-typescript-next"
-            ],
-            "settings": {
-                "editor.formatOnSave": true,
-                "editor.defaultFormatter": "esbenp.prettier-vscode"
-            }
-        }
-    },
-    "postCreateCommand": "npm install"
+  "name": "ai_developer_ts",
+  "dockerComposeFile": ["docker-compose.yml"],
+  "service": "ai_developer_ts",
+  "workspaceFolder": "/workspace",
+  "remoteUser": "vscode",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "ms-vscode.vscode-typescript-next",
+        "mhutchie.git-graph"
+      ],
+      "settings": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      }
+    }
+  },
+  "postCreateCommand": "npm install"
 }
