--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^1.5.1",
+    "@types/cheerio": "^0.22.35",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "dotenv": "^16.4.5",
+    "duck-duck-scrape": "^2.2.7",
+    "puppeteer": "^24.10.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
