--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
         "ms-vscode.vscode-typescript-next",
         "mhutchie.git-graph",
         "ms-azuretools.vscode-docker",
-        "ms-azuretools.vscode-containers"
+        "ms-azuretools.vscode-containers",
+        "yzhang.markdown-all-in-one"
       ],
       "settings": {
         "editor.formatOnSave": true,
