--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,6 +9,11 @@ services:
     network_mode: "host"
     volumes:
       - ..:/workspace
+    command: >
+      /bin/sh -c '
+      sudo service docker start &&
+      /bin/bash
+      '
     tty: true
     stdin_open: true
     privileged: true
